# ChangeLog for media-libs/freetype
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.124 2007/04/21 03:57:10 dirtyepic Exp $

  21 Apr 2007; Ryan Hill <dirtyepic@gentoo.org> -freetype-2.3.2-r2.ebuild,
  -freetype-2.3.2-r3.ebuild:
  Remove a couple more old ebuilds.

*freetype-2.3.4 (21 Apr 2007)

  21 Apr 2007; Ryan Hill <dirtyepic@gentoo.org>
  -files/freetype-2.2.1-foobillard.patch,
  -files/freetype-2.3.2-truetype-regression.patch,
  -files/freetype-2-enable_bci.patch, -freetype-2.2.1-r1.ebuild,
  -freetype-2.3.1.ebuild, +freetype-2.3.4.ebuild:
  Version bump.  Remove old versions.

  12 Apr 2007; Jose Luis Rivero <yoswink@gentoo.org>
  freetype-2.1.10-r3.ebuild:
  Stable on alpha wrt security bug #172577

  12 Apr 2007; Jeroen Roovers <jer@gentoo.org> freetype-2.1.10-r3.ebuild:
  Stable for HPPA (bug #172577).

  11 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  freetype-2.1.10-r3.ebuild:
  ppc stable, bug #172577

  11 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  freetype-2.1.10-r3.ebuild:
  Stable on sparc wrt security #172577

  11 Apr 2007; Markus Rothe <corsair@gentoo.org> freetype-2.1.10-r3.ebuild:
  Stable on ppc64; bug #172577

  11 Apr 2007; Peter Weller <welp@gentoo.org> freetype-2.1.10-r3.ebuild:
  Stable on amd64 wrt bug 172577

  11 Apr 2007; Raúl Porcel <armin76@gentoo.org> freetype-2.1.10-r3.ebuild:
  ia64 + x86 stable wrt security bug 172577

*freetype-2.3.3 (06 Apr 2007)

  06 Apr 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/freetype-2.3.3-buffer-overwrite.patch, +freetype-2.3.3.ebuild:
  Version bump.
   - includes the patch for CVE-2007-1351 present in 2.3.2-r3 along with other
   various bugfixes
   - also includes upstream patch for memory buffer overwrite soon to be
   released as freetype-2.3.4
   - new ftdiff utility for side-by-side font comparisons

*freetype-2.3.2-r3 (04 Apr 2007)
