@@ -75,14 +75,14 @@ EBUILD freetype-2.3.4.ebuild 2910 RMD160 8e8e6108048459647dfc7d18cabc938eef17f55
 MD5 ef47c8e25d5896eda9a4a0877f227e64 freetype-2.3.4.ebuild 2910
 RMD160 8e8e6108048459647dfc7d18cabc938eef17f556 freetype-2.3.4.ebuild 2910
 SHA256 0968e829a5c42d3e8356012589cbe06c28d95a18553e83912a1b5547dc94bc6a freetype-2.3.4.ebuild 2910
-MISC ChangeLog 18692 RMD160 cef8acd3b41395c14b2d1a4f4e5c80f60cea60f8 SHA1 b8138287c1ba6166d70fe5c06529bdc463347a0a SHA256 3458773e8740edf78bf26c4a2fb05ce157295ea12e00c94b9751d1399006f5cd
-MD5 3ae998864c9e0d5bf4a810829068b5aa ChangeLog 18692
-RMD160 cef8acd3b41395c14b2d1a4f4e5c80f60cea60f8 ChangeLog 18692
-SHA256 3458773e8740edf78bf26c4a2fb05ce157295ea12e00c94b9751d1399006f5cd ChangeLog 18692
-MISC metadata.xml 449 RMD160 1aa0a350b9b93a527af79a3d6aa6233d498d6366 SHA1 7491212724f2bb6e5068b47ebf4047f1f2c57056 SHA256 4a2b47a4958439e0e153d37652d2165891f490c3cbf356424636edb0b91114a7
-MD5 bc35457473f59e79ce028b34001d3e95 metadata.xml 449
-RMD160 1aa0a350b9b93a527af79a3d6aa6233d498d6366 metadata.xml 449
-SHA256 4a2b47a4958439e0e153d37652d2165891f490c3cbf356424636edb0b91114a7 metadata.xml 449
+MISC ChangeLog 18798 RMD160 21ef2461bd72493a1f86d4fcb068e1328db457a4 SHA1 b054f338d106b4f9b70b293e6d13cfe75e798be4 SHA256 89c9cc3ed5ab01838aa8fdec40e03f195ba13be9036f918da9498d02832d0b34
+MD5 2a107a44df658f3a6d4759b95d018f40 ChangeLog 18798
+RMD160 21ef2461bd72493a1f86d4fcb068e1328db457a4 ChangeLog 18798
+SHA256 89c9cc3ed5ab01838aa8fdec40e03f195ba13be9036f918da9498d02832d0b34 ChangeLog 18798
+MISC metadata.xml 219 RMD160 71993cfc42c14ad1e5fa0f67864200489345b70f SHA1 700713fad4b00f68790cba19d660fa6f61223211 SHA256 4629bfc7523bb3880601e0fb403dca87c95fe12efd589135b9df8b5f21a02d23
+MD5 900688457f98bf6b49bd2ef06e64e7be metadata.xml 219
+RMD160 71993cfc42c14ad1e5fa0f67864200489345b70f metadata.xml 219
+SHA256 4629bfc7523bb3880601e0fb403dca87c95fe12efd589135b9df8b5f21a02d23 metadata.xml 219
 MD5 10918fc5aac4314bd2e5c68ba12bddb2 files/digest-freetype-1.3.1-r4 500
 RMD160 6aea5fc9334cbb19738b9e764dca8b58f0030197 files/digest-freetype-1.3.1-r4 500
 SHA256 a246ee2bcd4f324ce902f48e815880d7352c85388cffa2ed2afa255410ccc796 files/digest-freetype-1.3.1-r4 500
